syntax = "proto3";

import "google/protobuf/empty.proto";

package suzu;

service BlogService {
  rpc GetBlog (google.protobuf.Empty) returns (GetBlogResponse) {}
  rpc GetHealth (google.protobuf.Empty) returns (GetHealthResponse) {}
}
message Blog {
  string url = 1;
  string date = 2;
  string blog_type = 3;
  string blog_title = 4;
}
message GetBlogResponse {
  repeated Blog blog_list = 1;
}
message GetHealthResponse {
  string text = 1;
}
